--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,6 @@ body {
 .form-input {
   @apply flex-1 border-b-n-3 bg-transparent border-b py-2;
 }
+.btn {
+  @apply bg-n-1 text-n-8 hover:text-color-1 font-bold px-4 py-2 rounded-md;
+}
