--- a/src/index.css
+++ b/src/index.css
@@ -21,5 +21,5 @@ body {
   @apply flex-1 border-b-n-3 bg-transparent border-b py-2;
 }
 .btn {
-  @apply bg-n-1 text-n-8 hover:text-color-1 font-bold px-4 py-2 rounded-md;
+  @apply bg-n-1 text-n-8 hover:text-color-1 font-bold px-4 py-2 rounded-md transition-all;
 }
